--- a/html/022. Aib (25-05-2024)/ib.html
+++ b/html/022. Aib (25-05-2024)/ib.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <video src="ib.mp4" autoplay controls loop></video>
+            <video src="iam.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>Tell</h1>
@@ -107,6 +107,22 @@
                 ke Istanbul, mau liat-liat aja, penasaran, hahaha.
                 Kan ada masih banyak tuh peninggalan-peninggalan 
                 di Turkey. Ya Allah, pengen ke Turkey ya Allah.
+            </p>
+            <p>
+               ... 
+            </p>
+            <p>
+                Semua hal yang aku mau bisa aku dapatkan dengan 
+                usaha, kerja keras, doa orang tua dan izin Allah. 
+                Jadi apa sih yang ngga mungkin kalo kita ngga nyerah?
+            </p>
+            <p>
+                Walaupun begitu, ada satu hal yang tidak berhasil 
+                aku dapatkan, ada di folder sebelumnya. Tapi hamba 
+                percayakan pada-Mu ya Allah. Engkau yang lebih 
+                tahu, berikanlah yang jauh lebih baik dan cocok 
+                untuk hamba sebagai gantinya. 
+                Aamiinn ya Allah, aamiinn Rabbal Alamiin.
             </p>
         </div>
     </div>
