--- a/html/024. Bismillah (26-05-2024)/bismillah.html
+++ b/html/024. Bismillah (26-05-2024)/bismillah.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <video src="b.mp4" autoplay controls loop></video>
+            <video src="hurt-so-good.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>Bismillah</h1>
