--- a/html/024. Bismillah (26-05-2024)/bismillah.html
+++ b/html/024. Bismillah (26-05-2024)/bismillah.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <video src="hurt-so-good.mp4" autoplay controls loop></video>
+            <video src="lucuuu.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>Bismillah</h1>
@@ -69,6 +69,48 @@
             <p>
                 Ingat, 50 juta dulu. 
                 Jangan jadi cewek lemah, kamu harus bisa.
+            </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Aku barusan lagi ngoding, terus istirahat bentar, 
+                aku buka-buka galeri dan nemu video ini, wkwkwk.
+                Lucu banget ngga sihh, hahaha. Ini udah aku save 
+                lama banget, dari sebelum kkn, pas kkn aku suka 
+                nonton lagi, suka aja liatnya wkwkwk.
+            </p>
+            <p>
+                Ini tuh kecil-kecil dan ramean. Kalo keluargaku 
+                kan 6 orang tuh, aku paling kecil, tapi kami selangnya 
+                agak jauh, 3 orang pertama selang 2 tahun, 3 orang 
+                terakhir selang 6 tahun. Jadi kayak, aku tuh udah 
+                terbiasa rame di rumah, walaupun umur kami agak 
+                beda jauh ngga kayak gini. Harusnya sih kami ber-8 
+                yah, tapi ada 2 bayi mamiku yang meninggal waktu 
+                masih kecil. Insya Allah mereka bisa narik orangtuanya 
+                nanti ke surga, aamiinn.
+            </p>
+            <p>
+                Seru banget ngga sih rame gini, walaupun pasti rusuh, 
+                tapii seruu. Baiklah, SURAT TERBUKA KEPADA BAPAK 
+                KALIAN, segera temukan ibu kalian ini, biar anaknya 
+                banyak dan lucu-lucu gini, kalo lama munculnya takut 
+                ngga keburu banyak, hahaha.
+            </p>
+            <p>
+                Tapii, ibu kalian ini belum siap finansial sih. 
+                Kayak ya, ibu ini harus bikin something yang bisa 
+                menghasilkan income secara pasif, biar masa depan 
+                kalian terjamin, ngga perlu kerja keluar rumah, 
+                dan ngga perlu jadi cewek materialistis, karena 
+                kalo masalah harta bisa dicari bareng. Aahhhh, 
+                intinya aku harus bisa kejar targetku di atas sihh.
+                Mana kepalaku kerasa mau pecah mikirin sumbernya 
+                darimanaa, arghhhh. 
+            </p>
+            <p>
+                Active income, passive income, MUNCUL LAH KALIAN!
             </p>
         </div>
     </div>
