--- a/html/026. Learn (28-05-2024)/ln.html
+++ b/html/026. Learn (28-05-2024)/ln.html
@@ -25,7 +25,7 @@
                 masukin saldo 10K ke ajaib buat belajar saham yekan. 
                 Terus aku beli lah saham reksa, sampe dapat return 
                 0,sekian persen. Tapi minggu lalu aku jual lagi 
-                reksanya, rencanku mau tes beli yang lain, dan itu 
+                reksanya, rencanaku mau tes beli yang lain, dan itu 
                 pake uang 10K wkwkwk.
             </p>
             <p>
