--- a/html/027. Self Love (29-05-2024)/sl.html
+++ b/html/027. Self Love (29-05-2024)/sl.html
@@ -44,7 +44,7 @@
                 Jadi, note to myself, udah bukan saatnya kamu ngerasa 
                 insecure dan kepercayaan diri extremely low, sekarang 
                 saatnya kamu menjadi secure dan menjadi kuat menghadapi 
-                setiap tantangan hidup. Oke? Pomise?
+                setiap tantangan hidup. Oke? Promise?
             </p>
             <p>
                 Kalo kita masih belum bisa berdamai dengan diri sendiri, 
