--- a/html/028. Iyakah (30-05-2024)/iy.html
+++ b/html/028. Iyakah (30-05-2024)/iy.html
@@ -9,6 +9,8 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
+            <!-- Aku kalo rapi suka bikin tiktok wkwkwk. Tapi ini kependekan 
+            ngga sih durasinya, hahaha -->
             <video src="iy.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
@@ -113,6 +115,47 @@
                 bisa aku perbaiki ya kepikiran terus jadinya wkwkwkwk. 
                 Dan kadang aku ngga salah pun bingung mau bela diri gimana, 
                 hahaha.
+            </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Aku barusan jemur kain, sambil mikir, kayaknya ya aku 
+                harus baca ulang lagi buku 'seni bersikap bodoamat'
+                aku punya versi pdfnya wkwkwk. Ya jawaban masalahku 
+                simpel aja, 'bodoamat.'
+            </p>
+            <p>
+                Dulu pas kkn, ada satu temen cewek, aku kayaknya pernah 
+                bahas deh, mereka se-geng ber-3 anak aceh semua, dan ada 
+                satu geng lagi ber-5 anak luar aceh semua, sementara itu 
+                aku dan fajr* ke dua-duanya masuk, walaupun agak lebih 
+                ke geng anak luar aceh, karena kami mementingkan proker.
+                Nahh, salah satu anak geng aceh pernah ngomong sama aku, 
+                "Kah pasti han ek ka eu long kan, kop brat han ek ka eu."
+                Ya aku jawab aja, "Hana hai, biasa manteng menye loen." 
+                Ya akunya ngerasa biasa aja sih. Mereka yang 3 ini emang 
+                agak ngeselin dan ngga ikut proker, pokoknya seenaknya 
+                lah di posko. Tapi ya aku ngerasa kayak beneran biasa aja 
+                sih, karena emang semua hal di kkn ngga aku suka.
+            </p>
+            <p>
+                Jadi aku ngerasa kayak, aku emang ngga suka sama sekali 
+                dengan semua ini, tempatnya aku suka tapi orang dan rekan 
+                ku yang emang ngga menyenangkan menurutku wkwkwk. Dan kayak,
+                 "Ngga papa nisa, ini kan cuman 1 bulan doang, ntar juga 
+                berlalu." Dan aku juga ngga punya waktu untuk ngga suka/benci 
+                banget sama temen-temenku, apalagi terkhusus dia yang nanya, 
+                'emang kamu sepenting itu ya di hidupku, sampai-sampai aku 
+                punya waktu untuk membenci kamu?' 
+                Aku hanya berpikir untuk profesional aja sebulan, dan setelah 
+                itu bebas.
+            </p>
+            <p>
+                Ngomong-ngomong soal profesioal, ahhh kan keinget lagi.
+                Gimana ya kalo aku ngga bisa lupain dia. Mana waktuku 
+                di dayah tinggal sebentar lagi. Duhh, aku harus gimana.
+                Arghhh, profesional susah, kabur juga ngga ngaruh. Hmmm.
             </p>
         </div>
     </div>
