--- a/html/028. Iyakah (30-05-2024)/iy.html
+++ b/html/028. Iyakah (30-05-2024)/iy.html
@@ -143,7 +143,7 @@
                 Jadi aku ngerasa kayak, aku emang ngga suka sama sekali 
                 dengan semua ini, tempatnya aku suka tapi orang dan rekan 
                 ku yang emang ngga menyenangkan menurutku wkwkwk. Dan kayak,
-                 "Ngga papa nisa, ini kan cuman 1 bulan doang, ntar juga 
+                "Ngga papa nisa, ini kan cuman 1 bulan doang, ntar juga 
                 berlalu." Dan aku juga ngga punya waktu untuk ngga suka/benci 
                 banget sama temen-temenku, apalagi terkhusus dia yang nanya, 
                 'emang kamu sepenting itu ya di hidupku, sampai-sampai aku 
@@ -152,7 +152,7 @@
                 itu bebas.
             </p>
             <p>
-                Ngomong-ngomong soal profesioal, ahhh kan keinget lagi.
+                Ngomong-ngomong soal profesional, ahhh kan keinget lagi.
                 Gimana ya kalo aku ngga bisa lupain dia. Mana waktuku 
                 di dayah tinggal sebentar lagi. Duhh, aku harus gimana.
                 Arghhh, profesional susah, kabur juga ngga ngaruh. Hmmm.
