--- a/html/029. Proses (31-05-2024)/ps.html
+++ b/html/029. Proses (31-05-2024)/ps.html
@@ -67,6 +67,34 @@
                 Ahhh kok jadi panjang sih, aku mau ngoding, tapi kayaknya 
                 ngatuk deh. Tidur aja kali ya, wkwkwk.
             </p>
+            <p>
+                ....
+            </p>
+            <P>
+                22.10
+            </P>
+            <p>
+                Hahahaha, duh, malu banget. Jadi kan barusan bagian talak 
+                dan aku kayak senyum gitu nahan ketawa, sebenenrnya rame 
+                yang ketawa kok, malah sitta*h sama r*hayu yang paling ngakak, 
+                kok cuman aku yang di notice sampe aku malu banget. Mana 
+                ay* sampe bilang leuh haji lagi, siapa juga yang mau nikah
+                leuh haji, aku aja masih pusingin jadwal sidangku yang 
+                ngga keluar-keluar udah mau sebulan.
+            </p>
+            <p>
+                Ya aku orangnya receh banget emang, gampang banget ketawa. 
+                Ya lucu aja ngga sih, apalagi ngeliat orang lain ketawa, 
+                kak jul depanku lucu banget ketawanya, akunya ikutan ketawa. 
+                Ahhh humorku terlalu receh, ahhhhh. Argghhh, aku sebenernya 
+                dengerin orang ngobrol lucu di kamar mandi aja ikutan 
+                ketawa, kalo mood lagi bagus malah semua orang yang ketemu 
+                aku senyumin.
+            </p>
+            <p>
+                Arghh aku terlalu receh. Ahhhhh. Gimana dong. Haduhh aku 
+                terlalu receh. Haduuhhhh.
+            </p>
         </div>
     </div>
 </body>
