--- a/html/029. Proses (31-05-2024)/ps.html
+++ b/html/029. Proses (31-05-2024)/ps.html
@@ -75,7 +75,7 @@
             </P>
             <p>
                 Hahahaha, duh, malu banget. Jadi kan barusan bagian talak 
-                dan aku kayak senyum gitu nahan ketawa, sebenenrnya rame 
+                dan aku kayak senyum gitu nahan ketawa, sebenernya rame 
                 yang ketawa kok, malah sitta*h sama r*hayu yang paling ngakak, 
                 kok cuman aku yang di notice sampe aku malu banget. Mana 
                 ay* sampe bilang leuh haji lagi, siapa juga yang mau nikah
