--- a/html/029. Proses (31-05-2024)/ps.html
+++ b/html/029. Proses (31-05-2024)/ps.html
@@ -95,6 +95,21 @@
                 Arghh aku terlalu receh. Ahhhhh. Gimana dong. Haduhh aku 
                 terlalu receh. Haduuhhhh.
             </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Sebenernya yah, aku ngga masalah sih sama mereka-mereka, 
+                akunya juga ketawa. Tapi aku maluu banget sama satu orang,
+                ya siapa lagi kalo bukan anu, masak aku norak banget sih 
+                di depan anu, itu doang ketawa. Haduuhh nisa, bikin malu 
+                aje. Ahhh aku ngga jelas amat dah, udah oon, norak banget 
+                lagi. 
+            </p>
+            <p>
+                Ahhh besok aja aku ngoding deh, sekarang ngga mood 
+                lagiiii. Dahlah.
+            </p>
         </div>
     </div>
 </body>
