--- a/html/030. Small Steps (01-06-2024)/smst.html
+++ b/html/030. Small Steps (01-06-2024)/smst.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <video src="ps.mp4" autoplay controls loop></video>
+            <video src="smst.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>Small Steps</h1>
