--- a/html/030. Small Steps (01-06-2024)/smst.html
+++ b/html/030. Small Steps (01-06-2024)/smst.html
@@ -57,6 +57,24 @@
                 ngga nembus tangan, wkwkwk. Oke, aku mau mandi dulu, 
                 abis itu aku akan memulai ngoding.
             </p>
+            <p>
+                22.05
+            </p>
+            <p>
+                Aku beneran heran deh, kenapa ya bisa keliatan aku 
+                kemaren ketawa. Emang sejauh itu mata orang normal 
+                tuh keliatan ya? Kok aku coba liat, jangankan ekspresi 
+                muka aja aku ngga bisa ngenalin guree. 
+            </p>
+            <p>
+                Tapi ya, aku udah tau sekarang, jadi ya pake cadar 
+                aja sih biar hidup aman dan tentram. Kak Jul sama 
+                Kak Dila yang ngeh aku sendiri yang masih pake
+                cadar sampe ngetawain kelakuan aku, wkwkwk. Ya 
+                ngga papa sih, aku harus lebih cerdas dari tgk kami, 
+                ya tetap aja kan ajnabi, enak aja liat-liat muka 
+                orang, hahaha.
+            </p>
         </div>
     </div>
 </body>
