--- a/html/030. Small Steps (01-06-2024)/smst.html
+++ b/html/030. Small Steps (01-06-2024)/smst.html
@@ -75,6 +75,24 @@
                 ya tetap aja kan ajnabi, enak aja liat-liat muka 
                 orang, hahaha.
             </p>
+            <p>
+                ....
+            </p>
+            <p>
+                Aku lagi mau bantuin far*ani bikin sitasi, tapi ini 
+                lagi nunggu laptopnya loadingnya agak lama. Kami 
+                ngobrol dan sampailah bahasan ke penyakit bayi, 
+                aku jadi keinget keponakanku kemaren.
+            </p>
+            <p>
+                Keponakan ku yang baru lahir kemaren namanya zik*i, 
+                dia tuh lagir prematur, ukurannya kecil banget. 
+                Beberapa hari di rawat di RSCM, terus berat badannya 
+                malah makin turun, jadinya kecil banget si baby.
+            </p>
+            <p>
+                Dia tu
+            </p>
         </div>
     </div>
 </body>
