--- a/html/030. Small Steps (01-06-2024)/smst.html
+++ b/html/030. Small Steps (01-06-2024)/smst.html
@@ -91,7 +91,23 @@
                 malah makin turun, jadinya kecil banget si baby.
             </p>
             <p>
-                Dia tu
+                Dia itu anak kedua kakak aku. Seharusnya lahirnya 
+                tgl 20 Juni kalo menurut bidannya, tapi malah lahir 
+                prematur 30 April kemaren. Ngga tau juga penyebabnya 
+                kenapa.
+            </p>
+            <p>
+                Pas di rawat itu, ternyata dia itu ada penyakit, 
+                penyakit kuning, jadi kayak kulit-kulitnya itu
+                berubah kuning, dan kemaren pas sakit itu berat 
+                badannya turun banget, udah ukuran 1,3 kilo, turun 
+                lagi, ya begitulah.
+            </p>
+            <p>
+                Nah terus, dia diobati lah di RSCM itu kan, kayak
+                di infra red gitu katanya untuk pengobatan penyakit 
+                kuningnya. Kalo sekarang udah di rumah, kami kemaren 
+                jemput bareng-bareng ke lhok
             </p>
         </div>
     </div>
