--- a/html/030. Small Steps (01-06-2024)/smst.html
+++ b/html/030. Small Steps (01-06-2024)/smst.html
@@ -107,7 +107,67 @@
                 Nah terus, dia diobati lah di RSCM itu kan, kayak
                 di infra red gitu katanya untuk pengobatan penyakit 
                 kuningnya. Kalo sekarang udah di rumah, kami kemaren 
-                jemput bareng-bareng ke lhok
+                jemput bareng-bareng ke lhok.
+            </p>
+            <p>
+                Kasian banget ngga sih masih kecil udah sakit begitu. 
+                Kalo orang dewasa kena penyakit kuning kan bahaya 
+                banget, dan aku juga belum paham sampe sekarang 
+                gimana sistemnya pengobatan kalo pake infrared itu, 
+                ya gimana mau paham orang teknik wkwkwk. Tapi kok 
+                bisa dengan cuman disinari gitu pulih ya. Apa si 
+                adeknya udah bener-bener pulih?
+            </p>
+            <p>
+                Dan sekarang aku baru paham, kenapa orang hamil kalo 
+                ditanya mau anaknya cewek atau cowok pasti jawabnya,
+                "se dikasihnya aja, yang penting sehat."
+            </p>
+            <p>
+                Ternyata kemungkinan ngga sehatnya gede yah, hmmm.
+                Ya Allah semoga segera pulih dedek bayinya. Dan 
+                semoga kita semua selalu diberikan kesehatan, Aaamiin 
+                ya Rabbal Alamin.
+            </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Aku lagi ngga pengen ngoding, pengen nulis random 
+                aja. 
+            </p>
+            <p>
+                Pernah ngga sih, ngerasa kayak bingung mau minta apa 
+                sama Allah? Seperti aku yang sakit matanya. Aku bingung 
+                mau minta gimana sama Allah. Ya aku yang punya sedikit
+                minus ini, walaupun dikit tetap ganggu penglihatan sih.
+                Jujur, aku bingung mau do'a gimana sama Allah. Kalo aku 
+                minta ini sembuh, siapa tau dengan aku ngga bisa jelas 
+                ngeliat jauh inilah cara Allah ngejaga pandangan, kayak 
+                gadhul bashar mode otomatis, wkwkwk.
+            </p>
+            <p>
+                Dan kalo aku minta ini ngga usah disembuhin, kan malah 
+                makin aneh doanya. Masak aku mau melihat dalam tidak 
+                nyaman selalu. Sampe-sampe aku mutusin, yaudahlah 
+                biarin aja ngga usah di doain apa-apa. Wkwkwk.
+            </p>
+            <p>
+                Tapi tiga hari yang lalu tiba-tiba aku keinget ini pas 
+                doa, 'aku mau sembuhya Allah', tapi aku berpikir lagi 
+                hal yang aku jelasin diatas.
+            </p>
+            <p>
+                Jadi aku revisi doanya, "Ya allah, neu peupuleh lom 
+                mata loen ya Allah, tapi meuseu memang saket loen nyo
+                untuk nak bek le dosa, neujadikannyo sebagai sebab 
+                untuk neupeu ampon dosa-dosa loen ya Allah."
+            </p>
+            <p>
+                Tapi aku ngga mau lagi doa gini, cuman 2 kali aja aku 
+                lakuin, bikin nangis tau. Kayak terlalu dalam untuk 
+                aku yang dangkal ini wkwkwk. Dahlah, tidur ajalah.
+                Aku juga udah siap ajarin far*ani bikin sitasinya.
             </p>
         </div>
     </div>
