--- a/html/030. Small Steps (01-06-2024)/smst.html
+++ b/html/030. Small Steps (01-06-2024)/smst.html
@@ -86,7 +86,7 @@
             </p>
             <p>
                 Keponakan ku yang baru lahir kemaren namanya zik*i, 
-                dia tuh lagir prematur, ukurannya kecil banget. 
+                dia tuh lahir prematur, ukurannya kecil banget. 
                 Beberapa hari di rawat di RSCM, terus berat badannya 
                 malah makin turun, jadinya kecil banget si baby.
             </p>
