--- a/html/031. Tiktok (02-06-2024)/tk.html
+++ b/html/031. Tiktok (02-06-2024)/tk.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <video src="join-tren2.mp4" autoplay controls loop></video>
+            <video src="join-trend2.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>Tiktok?</h1>
@@ -31,7 +31,7 @@
             <p>
                 Ahhh gimana dong, aku suka bikin tiktok. Arghhhh, 
                 apakah aku jadi fasikah karena akun tiktok ku itu? 
-                Haduuhhh arghhh, gimana dong. Gimana inii.
+                Haduuhhh arghhh, gimana dong.
             </p>
             <p>
                 Jujur sih, aku lebih suka liat mukaku sendiri 
