--- a/html/031. Tiktok (02-06-2024)/tk.html
+++ b/html/031. Tiktok (02-06-2024)/tk.html
@@ -42,6 +42,18 @@
                 fasikah karena suka liat muka hamba sendiri 
                 daripada liat foto langit-langit?
             </p>
+            <p>
+                ...
+            </p>
+            <p>
+                22.03
+            </p>
+            <p>
+                Huhuuu, hari ini hujan, jadi ngga ngaji deh. 
+            </p>
+            <p>
+                Tapi, bentar deh, aku mau 
+            </p>
         </div>
     </div>
 </body>
