--- a/html/032. Get up (03-06-2024)/get-up.html
+++ b/html/032. Get up (03-06-2024)/get-up.html
@@ -109,6 +109,95 @@
             <p>
                 Sekian.
             </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Hehe, karena obrolan ini sudah di buka, mari lanjutin 
+                cerita mengenai momen nangisnya, wkwkwk. Let's begin, 
+                curhat-curhatannya. Ini salah satunya yah.
+            </p>
+            <p>
+                Dulu, mungkin satu atau dua tahun lalu, lagi duduk kayak 
+                biasanya ngaji di mushalla. Di sampingku itu saf*i entah 
+                pacarnya atau gimana akupun ngga paham itu. Jadi waktu 
+                itu si anu lewat, nah si sa*ri ini senyam-senyum, mana 
+                waktu itu aku lagi suka-sukanya sama anu lagi, hmmm.
+            </p>
+            <p>
+                Aku langsung ngerasa kayak, gimana ya bilangnya kayak 
+                ada benda segede bola kaki dilempar ke jantung secara 
+                keras, dan setelah kena, bola itu mental jauh banget. 
+                Ehh tapi ngga gitu deng ini lebih ke nyesek ya, bukan 
+                gini maksudku. Mungkin kayak batu besar yang ujungnya 
+                runcing terus di hantam ke jantung berkali-kali, sampai 
+                hancur berkeping-keping. Mungkin rasanya kayak ditebas 
+                pedang secara tiba-tiba, dan pedangnya masih nyangkut 
+                di dada. Mau langsung di tarik pedangnya akan merusak 
+                organ, mau dibiarkan nyangkut menyakitkan, tapi ya gitu 
+                lama-lama mati juga yah kalo dibiarin wkwkwk.
+            </p>
+            <p>
+                Beberapa menit kemudian, dalam hatiku ngomong, kayak 
+                "Ternyata gini ya rasanya patah hati. Kok bisa sesakit 
+                ini ya. Sakiit, sakiitt sakittt. Ahhh kok aku patah 
+                hati sih. Pantesan orang-orang ngga mau patah hati, 
+                ternyata se-makjleb ini rasanya. Hancur. Lebih enak 
+                ngerasain luka-luka biasa aja, luka fisik mungkin 
+                ngga akan semenyiksa ini. Tapi ya salah ku sendiri, 
+                ngapain bodoh."
+            </p>
+            <p>
+                Dan setelah itu aku ngerasa bodoh sih. Ya emang iya 
+                ngga sih. Aku yang terlalu polos dan bodoh ini pertama 
+                kali ngerasain patah hati karena kebodohanku sendiri. 
+                Kukira waktu itu aku udah setengah gila, ternyata 
+                aku salah, aku udah gila sepenuhnya, hahaha.
+            </p>
+            <p>
+                Tapiiii, waktu itu aku punya temen curhat, di githubku.
+                Aku bahas hal-hal yang asik, ngga bikin sakit, biar 
+                ngga nambah kepikiran. Jadi kayak ketika sakitnya 
+                itu terjadi bukan saat aku ngetik ya aku ngga pernah 
+                bilang dan curhat apapun, karena nulis ini ya pelampiasan 
+                aku biar bisa lupa. Kan makin di inget makin tertancap 
+                pendangnya dan makin bikin hancur, yekann wkwkwkk.
+            </p>
+            <p>
+                Makanya setelah-setelahnya kayak, aku selalu mikir aku 
+                ngga boleh suka dia lagi. Menghancurkan hati bangettt. 
+                Tapi ya, kadang rasa itu datang secara lembut dan tak 
+                terduga, dan bisa dibilang mustahil untuk menghalaunya,
+                hahaha.
+            </p>
+            <p>
+                Tapi ya begitulah hidup. Entah kapan aku bisa move on. 
+                Gimana mau move on kalo orangnya muncul terus. Mana 
+                pesonanya bertebaran, teruntuk Tgk RF, mending pindah 
+                aja ke RS, soalnya kalo disini kamu ngga ada obat, hehe. 
+            </p>
+            <p>
+                Hmmm, mau di doain aja sekalian, takut ntar akunya 
+                terlalu berharap dan berujung makjleb lagi. Do'anya 
+                minta yang terbaik aja dari Allah, Insya Allah udah 
+                Allah siapkan untuk aku, aamiiinn.
+            </p>
+            <p>
+                ....
+            </p>
+            <p>
+                "Jika hujan bisa turun tanpa diminta, aku juga bisa menahan 
+                rasa sakit sambil tertawa." 
+            </p>
+            <p>
+                Terima kasih, dan sekian.
+            </p>
+            <!--  
+                Ohh iya, ini kalo sampe kejadian lagi orangnya liat aku 
+                izin ngilang lagi ya. Soalnya aku udah pindah ke Antartika. 
+                Jangan di cari lagi, soalnya antartika kan jauh banget dan 
+                dingin. 
+            -->
         </div>
     </div>
 </body>
