--- a/html/033. Never say Never (04-06-2024)/nsn.html
+++ b/html/033. Never say Never (04-06-2024)/nsn.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme2">
         <div class="video-section">
-            <video src="nsn.mp4" autoplay controls loop></video>
+            <video src="hm.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>Never say never</h1>
@@ -33,6 +33,16 @@
             <p>
                 Oke, aku mau jemur kain dulu bentar abis itu aku mau 
                 menyelesaikan ini.
+            </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Ehh iya, kalo baca folder sebelumnya, jadi aku disia-siain 
+                gitu aja nih? Kalo dipikir-pikir kasian banget dong orang 
+                sebaik, secerdas dan semanis aku ini disia-siakan. Hahaha. 
+                Dahlah, yang pasti aku tidak akan menyia-nyiakan diriku sendiri. 
+                Gasskeuunn nisa! Menyala diriku! Wkwkwkw.
             </p>
         </div>
     </div>
