--- a/html/034. GPT Ngambek (05-06-2024)/gn.html
+++ b/html/034. GPT Ngambek (05-06-2024)/gn.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme2">
         <div class="video-section">
-            <video src="gn.mp4" autoplay controls loop></video>
+            <video src="tdy.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>GPT Ngambek</h1>
@@ -30,6 +30,24 @@
             </p>
             <p>
                 Oke, sekarang lanjut deh.
+            </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Oohh ternyata kak Am*l incarannya, hahaha. Aku sih 
+                lebih dukung kak Ame* sama bang Am*r, wkwkwk. Tapi 
+                udah lost contact sih sama aku kak Am*lnya, ngga 
+                tau lagi kabar kak gimana, tapi ya emang belum 
+                nikah pastinya.
+            </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Ternyata sejelek apapun orang bisa dibantu filter, 
+                wkwkwk. Keliatan banget bedanya nofilter sama filter
+                hmmm, dahlah. Saatnya mengoding lagi.
             </p>
         </div>
     </div>
