--- a/html/035. Sidang (06-06-2024)/sdg.html
+++ b/html/035. Sidang (06-06-2024)/sdg.html
@@ -112,6 +112,10 @@
             <p>
                 ...
             </p>
+            <p>
+                Mantau live sroce, ini emang lawan irak susah banget apa 
+                ya? Ayok dong, indo menang dong, wkwkwk.
+            </p>
         </div>
     </div>
 </body>
