--- a/html/035. Sidang (06-06-2024)/sdg.html
+++ b/html/035. Sidang (06-06-2024)/sdg.html
@@ -113,8 +113,45 @@
                 ...
             </p>
             <p>
-                Mantau live sroce, ini emang lawan irak susah banget apa 
+                Mantau live score, ini emang lawan irak susah banget apa 
                 ya? Ayok dong, indo menang dong, wkwkwk.
+            </p>
+            <p>
+                Ahhh ngga menang, untung aku ngga nonton, kalo nonton 
+                kasian ngga sih. Dahlah.
+            </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Projekku belum rampung dan aku butuh tamparan. Gimana 
+                ya.
+            </p>
+            <p>
+                Hobi : rebahan
+                Keahlian : rebahan
+                Kegiatan sehari-hari : rebahan 
+                Kemampuan : mampu rebahan dalam berbagai kondisi
+            </p>
+            <p>
+                Sebenernya isi CV ku harusnya gini. Arghhhh gimana aku 
+                bisa capai targetku kalo aku rebahan terus, arghhh.
+            </p>
+            <p>
+                Ngga ngga, ngga boleh, minimal sekali seumur hidup aku 
+                harus ngerasain naik garbarata sepanjang ini, minimal 
+                aku harus bisa flight ke negara yang ada saljunya, aku 
+                pengen ngerasain banyak hal, dan sekarang aku masih muda, 
+                ini saatnya.
+            </p>
+            <P>
+                Aku harus ngelakuin full effort untuk mencapai mimpi gila 
+                ku. Kalu aku ngerasa males cuman gara-gara coding shit ini, 
+                ngga ada gunanya. Aku harus wujudin mimpi-mimpi gila ini. 
+                Aku harus jadi gila untuk mewujudkan hal yang lebih gila.
+            </P>
+            <p>
+                Ayo nisa, kamu gila! Wkwkwkwk.
             </p>
         </div>
     </div>
