--- a/html/035. Sidang (06-06-2024)/sdg.html
+++ b/html/035. Sidang (06-06-2024)/sdg.html
@@ -152,6 +152,9 @@
             </P>
             <p>
                 Ayo nisa, kamu gila! Wkwkwkwk.
+                Dunia sekarang udah gila, kalo aku ngga gila aku akan 
+                kalah. Aku harus work hard dan full effort untuk 
+                mendapatkan apa yang aku mau.
             </p>
         </div>
     </div>
