--- a/html/036. Plan (07-06-2024)/plan.html
+++ b/html/036. Plan (07-06-2024)/plan.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../css/style-01.css">
 </head>
 <body>
-    <div class="container theme3">
+    <div class="container theme5">
         <div class="video-section">
             <video src="pl.mp4" autoplay controls loop></video>
         </div>
@@ -73,6 +73,40 @@
             </p>
             <p>
                 Oke, dah, jamaah dulu.
+            </p>
+            <p>
+                Sebenernya planku simple banget ya ngga sih. Cuman 
+                bikin portfolio, kalo udah beres lanjut bikin app 
+                android, dan sekalian juga waktu-waktu kosong aku 
+                ini untuk belajar PNS sama English.
+            </p>
+            <p>
+                Masak sesimple ini aja aku ngga bisa sih, ya harus 
+                bisa dong!
+            </p>
+            <p>
+                Btw, saham goto jadi anjlok banget kemaren, bisa-bisanya 
+                turun jadi rp 59, kan aku jadi rugi seribu rupiah, 
+                wkwkwk. Ternyata gini ya rasanya jadi investor, selalu 
+                dibikin seneng dan kesal karena pergerakan saham yang 
+                ngga pasti. Tapi, salah satu saham yang pergerakannya 
+                naik terus sih BBCA, bagus buat nabung. Cuman ya gitu, 
+                harga perlembarnya aja 9 ribuan, kalo beli satu lot 
+                udah 9 ratusan, kadang hampir sejuta. Saham-saham bagus 
+                emang mahal yak.
+            </p>
+            <p>
+                Ada satu yang menarik banget, kayak yang punya barito 
+                pacifik, kan dia jadi orang terkaya karena sahamnya 
+                tumbuh pesat berkali-kali lipat. Mau beli sih, tapi 
+                muahal. Kayanya perlembar 100-200k deh kalo ngga salah.
+                Ehh bukan loh, ternyata DSSA yang harganya 196k, kalo 
+                Barito tuh ada yang rp 900-an aja. DSSA ini perusahaan 
+                apa sih, jadi penasaran, tahun 2020 harganya mentok di 
+                16k, dan sekarang udah 196k, tinggi banget naiknya.
+            </p>
+            <p>
+                Dahlah, aku mau cari referensi portfolio dulu.
             </p>
         </div>
     </div>
