--- a/html/036. Plan (07-06-2024)/plan.html
+++ b/html/036. Plan (07-06-2024)/plan.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <video src="pl.mp4" autoplay controls loop></video>
+            <video src="primadona.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>Plan?</h1>
@@ -107,6 +107,41 @@
             </p>
             <p>
                 Dahlah, aku mau cari referensi portfolio dulu.
+            </p>
+            <p>
+                ....
+            </p>
+            <p>
+                Ahhh, ngeselin banget. Ini beneran nih aku harus back 
+                to my ambis era lagi? Serius aku harus jadi ambis lagi? 
+                Aku udah lama banget ngga ngerasain ambis, serius deh. 
+                Aku sekarang udah kayak manusia nyantai tapi kerjaan 
+                kelar. Walaupun kelarnya agak lama. Aaaa aku bukan si 
+                nisa cewek ambis yang dulu.
+            </p>
+            <p>
+                Terakhir kali ambis banget pas SMA, dan masih kerasa 
+                sisanya selama 1 tahun di dayah. Sekarang entah kemana 
+                keambisanku yang dulu. Kalo dulu, orang-orang tidur 
+                aku belajar, aku ngoding. Turun ngaji langsung ngulang 
+                kitab, abis itu buka laptop. Atau kadang sebaliknya, 
+                buka laptop dulu baru ngulang.
+            </p>
+            <p>
+                Arghh kenapa aku harus balik ke era ambiss lagi sih. 
+                Aku sekarang tuh ngoding sambil liat sosmed. Kadang 
+                minta dibikin coding sama chat gpt, sambil nunggu ya 
+                scrolling. Kadang sampe lupa kalo aku lagi ngoding 
+                dan lanjut main hape. Ini ngga bikin capek sih, tapi 
+                bikin lama, dan aku sering kehabisan waktu ngga jelas.
+            </p>
+            <p>
+                Arghhhh aku harus kembali ambis ngga sih, biat lebih 
+                powerfull. Iya sih kayaknya. Tapii aku lupa caranya 
+                ambis woii, astaghfirullah. 
+            </p>
+            <p>
+                Ya Allah bantu hamba menjadi ambis lagi, ya Allah.
             </p>
         </div>
     </div>
