--- a/html/036. Plan (07-06-2024)/plan.html
+++ b/html/036. Plan (07-06-2024)/plan.html
@@ -143,6 +143,55 @@
             <p>
                 Ya Allah bantu hamba menjadi ambis lagi, ya Allah.
             </p>
+            <p>
+                Nih ya, kalo aku mode nyantai dan malas-malasan gini 
+                aja bisa capai cumlaude (semoga iya wkwkwk), berarti 
+                aku mode ambis akan lebih keren lagi. Hmmm, dari 
+                dulu aku selalu ngomong kalo aku ngga mau jadi PNS, 
+                karena kerjanya full dan ngga fleksibel, masak aku 
+                harus menjilat ludah sendiri? Wkwkwk, bahasa kasarnya 
+                sih gitu.
+            </p>
+            <p>
+                Jadi, aku yakin aku akan bisa kalo aku beneran ambis. 
+                Minimal satu-dua tahun aja ambisnya, kalo udah keliatan 
+                hasilnya, aku bisa lanjut nyantai lagi. 
+            </p>
+            <p><b>
+                Hidup indah bila dinikmati. Tapi hidup yang tidak pernah 
+                dipertaruhkan, tidak akan dimenangkan.
+            </b></p>
+            <p>
+                ...
+            </p>
+            <p>
+                Btw, aku jadi kepikiran deh, aku kan dulu suka ngetik 
+                panjang banget gini. Apakah Mas Patrick dulu membaca ini 
+                sampai habis? Ngga mungkin ngga sih, aku aja yang udah 
+                ngetik sendiri males baca ulang, panjang banget, hahaha. 
+                Kalopun diliat, paling judul doang sih, ya maksimal 3 
+                paragraf pertama. Kayak aku kalo liat caption tiktok 
+                panjang, ngga aku baca langsung scrolling, hahaha.
+            </p>
+            <p>
+                Ahh ngapain bahas dia lagi sih. Aku kan harus move on. 
+                Tapi dia terlalu, aku ngga mau ngetik takut orangnya 
+                liat. Arghh, ngga mungkin. Dia terlalu keren, kalo 
+                kata novel 'super badass.' Astaghfirullah, ampuuun 
+                ya Allah, ampuunn. Gimana mau lupa, aku di rumah aja 
+                masih kepikiran orangnya, padahal ngga aku save dan ngga 
+                aku liat sama sekali. Tolongin hamba move on ya Allah.
+            </p>
+            <p>
+                Arghhh, mungkin dengan ambis aku bisa move on. 
+                Ini satu-satunya harapan terakhir aku, soalnya aku 
+                ngga bisa suka orang lain, hahaha. Dahlah.
+                Oke, dalam hitungan lima, empat, tiga, dua, satu, 
+                keambisan ini dimulai. 
+            </p>
+            <p>
+                This is cebiss, cewek ambis! Menyalaa Nisa!
+            </p>
         </div>
     </div>
 </body>
