--- a/html/037. Dehidrasi (08-06-2024)/d.html
+++ b/html/037. Dehidrasi (08-06-2024)/d.html
@@ -72,6 +72,21 @@
                 perutku kerasa kembung banget, penuh dengan air, ahhh 
                 bodoamat lah, daripada mati.
             </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Hidup udah ribet, malah dibikin tambah ribet sama kelakuan 
+                github. Ehh kamu niat mau ngedaftarin aku ngga sih. Udah 
+                berkali-kali salah mulu. Mana sebelumnya pake suara-suara 
+                hewan, 4 kali bener kali ke-5 sengaja dibikin rancu jadi 
+                jawabanku salah mulu. Ahhh, ngeselin banget githubbb.
+                Mau bikin akun satu aja ribet banget dah, tolong dong 
+                ini diperbaiki. Terus ini diminta hitung dadu, ahh capek 
+                ada-ada aja kelakuan github, tolong dong jangan terlalu 
+                random verivynya. Beneran melatih kesabaran banget deh.
+                Astaghfirullah.
+            </p>
         </div>
     </div>
 </body>
