--- a/html/037. Dehidrasi (08-06-2024)/d.html
+++ b/html/037. Dehidrasi (08-06-2024)/d.html
@@ -87,6 +87,15 @@
                 random verivynya. Beneran melatih kesabaran banget deh.
                 Astaghfirullah.
             </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Ahh apakah aku akan segera mati ya? Kok aku jadi kepikiran 
+                ini terus sih. Katanya kalo ada firasat, paling lama 
+                44 hari bertahan. Apa iya ya, ini firasat kalo aku akan 
+                segera mati? Tapi hamba belum siap mati ya Allah...
+            </p>
         </div>
     </div>
 </body>
